# forecite

./: README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
forecite/: __init__.py  core.py
forecite/tests/: test_core.py
licenses/: LICENSE.rst
